Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-2591

DataStreamSender::Send() does not return an error status if SendBatch() failed

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.3.0
    • Impala 2.5.0, Impala 2.3.2
    • None

    Description

      The DataStreamSender::Send() does not return an error status if SendBatch() failed. This could potentially cause some problems further in the execution.

      Attachments

        Activity

          People

            sailesh Sailesh Mukil
            sailesh Sailesh Mukil
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: